monticore-generator/src/test/resources/cocos/invalid/A4035/A4035.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A4035;

grammar A4035 {

  S = "s" Name  ";" ;

  astrule S = b:boolean
              b:String ;

}
